test(t-4): mock using MSW to simulate successful and failure API calls

--- a/turbo.json
+++ b/turbo.json
@@ -12,6 +12,13 @@
     "dev": {
       "cache": false,
       "persistent": true
+    },
+    "test:watch": {
+      "cache": false,
+      "persistent": true
+    },
+    "test": {
+      "outputs": ["coverage/**"]
     }
   }
 }
