--- a/apps/t-4/package.json
+++ b/apps/t-4/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "test:watch": "vitest",
+    "test": "vitest run --coverage",
     "build": "vue-tsc && vite build",
     "preview": "vite preview"
   },
@@ -12,9 +14,14 @@
     "vue": "^3.4.15"
   },
   "devDependencies": {
+    "@testing-library/vue": "8.0.2",
     "@vitejs/plugin-vue": "^5.0.3",
+    "@vitest/coverage-v8": "1.3.0",
+    "happy-dom": "13.3.8",
+    "msw": "2.2.0",
     "typescript": "^5.2.2",
     "vite": "^5.1.0",
+    "vitest": "1.3.0",
     "vue-tsc": "^1.8.27"
   }
 }
